verion up + new lang

--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -383,7 +383,7 @@
 "E-mail Usage Information" = "Información de uso del correo electrónico";
 "Password fields do not match." = "Las contraseñas no coinciden";
 "Please check the e-mail address." = "Por favor verifique la dirección de correo electrónico.";
-"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Establezca una contraseña que incluya letras y números no consecutivos, un mínimo de 6 máximo de 16 caracteres.";
+"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Esta contraseña no cumple con las siguientes normas.";
 "Please check the GSM number" = "Por favor revise su número de teléfono";
 "Login denied. Please check your credentials." = "Inicio de sesión denegado Por favor revise sus credenciales.";
 "Request failed \n Please try again" = "Solicitud fallida\nPor favor, Inténtelo de nuevo";
@@ -434,7 +434,7 @@
 "%%%d Restored…" = "%%%d Restaurado ...";
 "%%%d Analyzed…" = "%%%d Analizado ...";
 "%%%d Backed up…" = "%%%d Respaldado ...";
-"Restored %d Contacts" = "Contactos %d restaurados";
+"Restored %d Contacts" = "Tienes %d contactos en tu dispositivo.";
 "%d Duplicated Contacts Deleted" = "%d contactos duplicados eliminados";
 "You have %d numbers on your contacts backup." = "Tiene %d números en la copia de seguridad de sus contactos.";
 "This contact will be deleted from your contacts." = "Este contacto será eliminado de sus contactos.";
@@ -1512,3 +1512,123 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "álbum(s) eliminado";
+"hide_album_action_sheet" = "Ocultar el álbum";
+"sign_up_password_rules" = "Tu contraseña debe tener menos de 6 caracteres ni más de 16 caracteres, debe contener al menos un número y una letra mayúscula, y debe contener letras no consecutivas.";
+"documents_album_card_title" = "¿Desearías ocultar estos archivos?";
+"documents_album_card_description" = "%d elementos incluidas las imágenes de pantalla y documentos, se ha agrupado en el Álbum de Documentos. Puedes ordenar tu galería al ocultar este álbum. Puedes acceder en cualquier momento que desee a estas fotos a través del Álbum Oculto.";
+"documents_album_card_hide_button" = "Ocultar el Álbum de Documento";
+"documents_album_card_view_button" = "Visualizar el Álbum de Documento";
+"snackbar_ok" = "Ok.";
+"snackbar_trash_bin" = "Papelera";
+"snackbar_hidden_bin" = "Álbum Oculto";
+"analyze_history_delete_success" = "Se eliminó %d archivos.";
+"added_to_favorites_message" = "Se agregó a los favoritos.";
+"removed_from_favorites" = "Se retiró de los favoritos.";
+"added_to_album" = "Se agregó al Álbum.";
+"downloaded_files" = "Se descargaron %d archivos.";
+"edit_saved" = "Guardado.";
+"files_moved" = "El archivo (los archivos) se movió/movieron.";
+"success_remove_passcode" = "Se eliminó la contraseña.";
+"added_to_favorites_from_lifebox" = "Se agregó a los favoritos.";
+"edit_security_question_success" = "Se actualizó la pregunta de seguridad.";
+"set_security_question_success" = "Se creó la pregunta de seguridad.";
+"import_from_instagram_started" = "Comenzó la transferencia desde Instagram.";
+"import_from_facebook_started" = "Comenzó la transferencia desde Facebook.";
+"instapick_hashtags_copied" = "Se copiaron los hashtags.";
+"create_story_selection_limit" = "Por favor seleccionar la foto %d máxima";
+"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"free_up_space_alert_title" = "Crear espacio en tu teléfono";
+"free_up_space_no_duplicates" = "No tienes foto / video repetitivos.";
+"free_up_space_in_progress" = "Todavía no está preparado tu lista de archivos repetitivos, por favor volver a probarlo más tarde.";
+"all_people_become_premium_text" = "Ser miembro Premium para ver todos los contactos!";
+"no_people_become_premium_text" = "No se pudo identificar ningún contacto. Ser miembro Premium para ver los contactos y poder acceder a más funciones!";
+"face_image_enable" = "Activar la agrupación de Cara & Objeto";
+"face_image_enable_message_text" = "Se agrupan de acuerdo con la cara y objetos las fotos que cargas cuando se active la función de identificación de Cara & Objeto.";
+"face_image_enable_snack_text" = "Se están agrupando tus fotos con la identificación de Cara & Objeto, por favor volver a controlarlo más tarde.";
+"file_info_people" = "Activar la función de identificación de cara & objetivo para ver los contactos en las fotos.";
+"removed_from_album_success" = "El objetivo (los objetivos) se removió/ removieron con éxito.";
+"Already have an account?" = "¿Ya tienes una cuenta?";
+"already_have_account_title" = "¿Ya tienes una cuenta?";
+"contact_phase2_delete_duplicates_title" = "";
+"contact_phase2_delete_duplicates_top_label" = "";
+"contact_phase2_delete_duplicates_delete_all" = "";
+"contact_phase2_delete_duplicates_count" = "";
+"contact_phase2_delete_duplicates_confirm_title" = "";
+"contact_phase2_delete_duplicates_confirm_message" = "";
+"contact_phase2_delete_duplicates_success_title" = "";
+"contact_phase2_delete_duplicates_success_message" = "";
+"contact_phase2_delete_duplicates_back_up_title" = "";
+"contact_phase2_delete_duplicates_back_up_message" = "";
+"contact_phase2_delete_duplicates_back_up_button" = "";
+"contact_phase2_delete_duplicates_progress_title" = "";
+"contact_phase2_delete_duplicates_progress_message" = "";
+"contact_phase2_back_up_contacts_confirm_title" = "";
+"contact_phase2_back_up_contacts_confirm_message" = "";
+"contact_phase2_contact_list_navbar_title" = "";
+"contact_phase2_contact_list_title" = "";
+"contact_phase2_contact_list_info" = "";
+"contact_phase2_contact_list_restore" = "";
+"contact_phase2_contact_list_delete_all" = "";
+"contact_phase2_restore_contacts_confirm_title" = "";
+"contact_phase2_restore_contacts_confirm_message" = "";
+"contact_phase2_restore_contacts_progress_title" = "";
+"contact_phase2_restore_contacts_progress_message" = "";
+"contact_phase2_restore_contacts_success_title" = "";
+"contact_phase2_restore_contacts_success_message" = "";
+"contact_phase2_delete_contacts_confirm_title" = "";
+"contact_phase2_delete_contacts_confirm_message" = "";
+"contact_phase2_delete_all_contacts_success_message" = "";
+"contact_phase2_delete_backup_success_message" = "";
+"contact_phase2_contact_detail_navbar_title" = "";
+"contact_phase2_contact_detail_section_phone" = "";
+"contact_phase2_contact_detail_section_email" = "";
+"contact_phase2_contact_detail_section_address" = "";
+"contact_phase2_contact_detail_section_birthday" = "";
+"contact_phase2_contact_detail_section_notes" = "";
+"contact_phase2_contact_detail_no_info" = "";
+"Off" = "Apagado";
+"contact_phase2_backup_contacts_title" = "";
+"contact_phase2_backup_contacts_message" = "";
+"contact_phase2_backup_contacts_button" = "";
+"contact_phase2_small_card_backup_message" = "";
+"contact_phase2_small_card_backup_button" = "";
+"contact_phase2_small_card_duplicates_message" = "";
+"contact_phase2_small_card_duplicates_button" = "";
+"contact_phase2_big_card_backup_message" = "";
+"contact_phase2_big_card_contacts" = "";
+"contact_phase2_big_card_see_contacts_button" = "";
+"contact_phase2_big_card_autobackup_format" = "";
+"contact_phase2_backup_progress_title" = "";
+"contact_phase2_backup_progress_message" = "";
+"contact_phase2_cancel_analyze_button" = "";
+"contact_phase2_analyze_progress_message" = "";
+"contact_phase2_history_navbar_title" = "";
+"contact_phase2_history_header" = "";
+"contact_phase2_restore_button" = "";
+"contact_phase2_delete_button" = "";
+"contact_phase2_restore_popup_title" = "";
+"contact_phase2_delete_popup_title" = "";
+"contact_phase2_restore_popup_message" = "";
+"contact_phase2_delete_popup_message" = "";
+"contact_phase2_history_cell_title" = "";
+"contact_phase2_error_RemoteServer1101" = "";
+"contact_phase2_error_RemoteServer2000" = "";
+"contact_phase2_error_RemoteServer3000" = "";
+"contact_phase2_error_RemoteServer4000" = "";
+"contact_phase2_error_network" = "";
+"contact_phase2_delete_backup_success_card_title" = "";
+"contact_phase2_delete_backup_success_card_message" = "";
+"contact_phase2_contact_backup_success_navbar_title" = "";
+"contact_phase2_contact_backup_success_title" = "";
+"contact_phase2_contact_backup_success_message" = "";
+"contact_phase2_warning_popup_contact_permissions_title" = "";
+"contact_phase2_warning_popup_contact_permissions_message" = "";
+"contact_phase2_warning_popup_contact_permissions_storage_button" = "";
+"contact_phase2_warning_popup_contact_permissions_delete_button" = "";
+"contact_phase2_warning_popup_storage_limit_title" = "";
+"contact_phase2_warning_popup_storage_limit_message" = "";
+"contact_phase2_warning_popup_storage_limit_settings_button" = "";
+"contact_phase2_error_iternal" = "";
+"contact_phase2_error_quota_restore" = "";
+"contact_phase2_error_quota_backup" = "";
+"download_document_error_popup" = "Sólo puedes descargar fotos, video o álbum.";
