--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -369,7 +369,7 @@
 "E-mail Usage Information" = "Информация об использовании адреса электронной почты";
 "Password fields do not match." = "Пароли не совпадают";
 "Please check the e-mail address." = "Пожалуйста, проверьте электронный адрес.";
-"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Пожалуйста, установите пароль, состоящий из непоследовательных букв и цифр, длиной не менее 6 и не более 16 символов.";
+"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Этот пароль не соответствует приведенным ниже правилам.";
 "Please check the GSM number" = "Пожалуйста, проверьте номер телефона";
 "Login denied. Please check your credentials." = "Вход запрещён. Пожалуйста, проверьте учётные данные";
 "Request failed \n Please try again" = "Не удалось выполнить запрос. Пожалуйста, попробуйте снова.";
@@ -414,7 +414,7 @@
 "%%%d Restored…" = "%%%d восстановлено";
 "%%%d Analyzed…" = "%%%d Проанализировано…";
 "%%%d Backed up…" = "Резервное копирование...";
-"Restored %d Contacts" = "Восстановлено %d контактов";
+"Restored %d Contacts" = "У вас есть% d контактов на вашем устройстве";
 "%d Duplicated Contacts Deleted" = "%d дубликатов удалено";
 "You have %d numbers on your contacts backup." = "У вас %d контакт(-а, -ов) в lifebox";
 "This contact will be deleted from your contacts." = "Данный контакт будет удалён из вашего списка контактов.";
@@ -1434,15 +1434,15 @@
 "settings_action_sheet_edit_profile_photo" = "Обновить фотографию профиля";
 "original_сopy_package_description" = "+ Хранение в Оригинальном Качестве";
 "become_premium_navbar_title" = "Специальное Предложение!";
-"become_premium_header_default_title" = "Специальное предложение для вас!";
+"become_premium_header_default_title" = "Специальное предложение!";
 "become_premium_header_default_subtitle" = "Хотите сохранить ваши воспоминания в оригинальном качестве? Может быть, вам нужна помощь в организации ваших фотографий и контактов? Станьте Premium -участником и позвольте lifebox облегчить вашу жизнь. Проверьте наши Premium функции и специальные предложения для вас.";
-"become_premium_header_people_title" = "Специальное предложение для вас!";
+"become_premium_header_people_title" = "Специальное предложение!";
 "become_premium_header_people_subtitle" = "Хотите сохранить ваши воспоминания в оригинальном качестве? Может быть, вам нужна помощь в организации ваших фотографий и контактов? Станьте Premium -участником и позвольте lifebox облегчить вашу жизнь. Проверьте наши Premium функции и специальные предложения для вас.";
-"become_premium_header_places_title" = "Специальное предложение для вас!";
+"become_premium_header_places_title" = "Специальное предложение!";
 "become_premium_header_places_subtitle" = "Хотите сохранить ваши воспоминания в оригинальном качестве? Может быть, вам нужна помощь в организации ваших фотографий и контактов? Станьте Premium -участником и позвольте lifebox облегчить вашу жизнь. Проверьте наши Premium функции и специальные предложения для вас.";
-"become_premium_header_things_title" = "Специальное предложение для вас!";
+"become_premium_header_things_title" = "Специальное предложение!";
 "become_premium_header_things_subtitle" = "Хотите сохранить ваши воспоминания в оригинальном качестве? Может быть, вам нужна помощь в организации ваших фотографий и контактов? Станьте Premium -участником и позвольте lifebox облегчить вашу жизнь. Проверьте наши Premium функции и специальные предложения для вас.";
-"become_premium_header_contact_sync_title" = "Специальное предложение для вас!";
+"become_premium_header_contact_sync_title" = "Специальное предложение!";
 "become_premium_header_contact_sync_subtitle" = "Хотите сохранить ваши воспоминания в оригинальном качестве? Может быть, вам нужна помощь в организации ваших фотографий и контактов? Станьте Premium -участником и позвольте lifebox облегчить вашу жизнь. Проверьте наши Premium функции и специальные предложения для вас.";
 "become_premium_description" = "Хранение в Оригинальном Качестве\nНеограниченное Распознавание Лиц&Объектов& Местоположения\nУдаление Повторяющихся Контактов в Телефонном Справочнике\nНеограниченный Анализ Photopick";
 "become_premium_or_text" = "ИЛИ приобретите дополнительное хранилище и получите Premium -функции БЕСПЛАТНО!";
@@ -1484,3 +1484,123 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "альбом(ы) удален";
+"hide_album_action_sheet" = "Скрыть Альбом";
+"sign_up_password_rules" = "Пароль должен содержать не менее 6 и не более 16 символов, содержать как минимум одну цифру и заглавную букву, включая непоследовательные буквы.";
+"documents_album_card_title" = "Хотите скрыть эти файлы?";
+"documents_album_card_description" = "%d элементов, включая изображения с экрана и документы, сгруппированы в Альбом Документов. Вы можете редактировать свою галерею, скрыв этот альбом. Вы можете получить доступ к этим фотографиям в Скрытом Альбоме в любое время.";
+"documents_album_card_hide_button" = "Скрыть Альбом Документов";
+"documents_album_card_view_button" = "Показать Альбом Документов";
+"snackbar_ok" = "Хорошо.";
+"snackbar_trash_bin" = "Корзина";
+"snackbar_hidden_bin" = "Скрытый Альбом";
+"analyze_history_delete_success" = "%d файл(ов) были удалены.";
+"added_to_favorites_message" = "Добавлено в Избранное.";
+"removed_from_favorites" = "Удалено из Избранного.";
+"added_to_album" = "Добавлено в Альбом.";
+"downloaded_files" = "%d файл(ов) загружено.";
+"edit_saved" = "Сохранено.";
+"files_moved" = "Файл(ы) перемещены.";
+"success_remove_passcode" = "Пароль удален.";
+"added_to_favorites_from_lifebox" = "Добавлено в Избранное.";
+"edit_security_question_success" = "Контрольный вопрос был обновлен.";
+"set_security_question_success" = "Контрольный вопрос был создан.";
+"import_from_instagram_started" = "Начался импорт из Instagram.";
+"import_from_facebook_started" = "Начался импорт из Facebook.";
+"instapick_hashtags_copied" = "Хэштеги скопированы.";
+"create_story_selection_limit" = "Пожалуйста, выберите максимум %d фотографий.";
+"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"free_up_space_alert_title" = "Освободите Место на вашем телефоне";
+"free_up_space_no_duplicates" = "У вас нет повторяющихся фотографий / видео.";
+"free_up_space_in_progress" = "Ваш список повторяющихся файлов еще не готов, пожалуйста, попробуйте позже.";
+"all_people_become_premium_text" = "Станьте Премиум-участником, чтобы увидеть все контакты!";
+"no_people_become_premium_text" = "Ни один из контактов не был идентифицирован. Станьте Премиум участником, чтобы видеть контакты и получить доступ к большему количеству функций!";
+"face_image_enable" = "Включить группировку Лиц & Объектов";
+"face_image_enable_message_text" = "При включении Распознавания Лиц & Объектов загружаемые фотографии группируются по лицам и объектам.";
+"face_image_enable_snack_text" = "Благодаря Распознаванию Лиц & Объектов ваши фотографии начинают группироваться, пожалуйста, проверьте позже.";
+"file_info_people" = "Включите Распознавание Лиц & Объектов, чтобы видеть людей на фотографиях.";
+"removed_from_album_success" = "Предмет(ы) были успешно удалены.";
+"Already have an account?" = "У вас уже есть аккаунт?";
+"already_have_account_title" = "У вас уже есть аккаунт?";
+"contact_phase2_delete_duplicates_title" = "";
+"contact_phase2_delete_duplicates_top_label" = "";
+"contact_phase2_delete_duplicates_delete_all" = "";
+"contact_phase2_delete_duplicates_count" = "";
+"contact_phase2_delete_duplicates_confirm_title" = "";
+"contact_phase2_delete_duplicates_confirm_message" = "";
+"contact_phase2_delete_duplicates_success_title" = "";
+"contact_phase2_delete_duplicates_success_message" = "";
+"contact_phase2_delete_duplicates_back_up_title" = "";
+"contact_phase2_delete_duplicates_back_up_message" = "";
+"contact_phase2_delete_duplicates_back_up_button" = "";
+"contact_phase2_delete_duplicates_progress_title" = "";
+"contact_phase2_delete_duplicates_progress_message" = "";
+"contact_phase2_back_up_contacts_confirm_title" = "";
+"contact_phase2_back_up_contacts_confirm_message" = "";
+"contact_phase2_contact_list_navbar_title" = "";
+"contact_phase2_contact_list_title" = "";
+"contact_phase2_contact_list_info" = "";
+"contact_phase2_contact_list_restore" = "";
+"contact_phase2_contact_list_delete_all" = "";
+"contact_phase2_restore_contacts_confirm_title" = "";
+"contact_phase2_restore_contacts_confirm_message" = "";
+"contact_phase2_restore_contacts_progress_title" = "";
+"contact_phase2_restore_contacts_progress_message" = "";
+"contact_phase2_restore_contacts_success_title" = "";
+"contact_phase2_restore_contacts_success_message" = "";
+"contact_phase2_delete_contacts_confirm_title" = "";
+"contact_phase2_delete_contacts_confirm_message" = "";
+"contact_phase2_delete_all_contacts_success_message" = "";
+"contact_phase2_delete_backup_success_message" = "";
+"contact_phase2_contact_detail_navbar_title" = "";
+"contact_phase2_contact_detail_section_phone" = "";
+"contact_phase2_contact_detail_section_email" = "";
+"contact_phase2_contact_detail_section_address" = "";
+"contact_phase2_contact_detail_section_birthday" = "";
+"contact_phase2_contact_detail_section_notes" = "";
+"contact_phase2_contact_detail_no_info" = "";
+"Off" = "Выключено";
+"contact_phase2_backup_contacts_title" = "";
+"contact_phase2_backup_contacts_message" = "";
+"contact_phase2_backup_contacts_button" = "";
+"contact_phase2_small_card_backup_message" = "";
+"contact_phase2_small_card_backup_button" = "";
+"contact_phase2_small_card_duplicates_message" = "";
+"contact_phase2_small_card_duplicates_button" = "";
+"contact_phase2_big_card_backup_message" = "";
+"contact_phase2_big_card_contacts" = "";
+"contact_phase2_big_card_see_contacts_button" = "";
+"contact_phase2_big_card_autobackup_format" = "";
+"contact_phase2_backup_progress_title" = "";
+"contact_phase2_backup_progress_message" = "";
+"contact_phase2_cancel_analyze_button" = "";
+"contact_phase2_analyze_progress_message" = "";
+"contact_phase2_history_navbar_title" = "";
+"contact_phase2_history_header" = "";
+"contact_phase2_restore_button" = "";
+"contact_phase2_delete_button" = "";
+"contact_phase2_restore_popup_title" = "";
+"contact_phase2_delete_popup_title" = "";
+"contact_phase2_restore_popup_message" = "";
+"contact_phase2_delete_popup_message" = "";
+"contact_phase2_history_cell_title" = "";
+"contact_phase2_error_RemoteServer1101" = "";
+"contact_phase2_error_RemoteServer2000" = "";
+"contact_phase2_error_RemoteServer3000" = "";
+"contact_phase2_error_RemoteServer4000" = "";
+"contact_phase2_error_network" = "";
+"contact_phase2_delete_backup_success_card_title" = "";
+"contact_phase2_delete_backup_success_card_message" = "";
+"contact_phase2_contact_backup_success_navbar_title" = "";
+"contact_phase2_contact_backup_success_title" = "";
+"contact_phase2_contact_backup_success_message" = "";
+"contact_phase2_warning_popup_contact_permissions_title" = "";
+"contact_phase2_warning_popup_contact_permissions_message" = "";
+"contact_phase2_warning_popup_contact_permissions_storage_button" = "";
+"contact_phase2_warning_popup_contact_permissions_delete_button" = "";
+"contact_phase2_warning_popup_storage_limit_title" = "";
+"contact_phase2_warning_popup_storage_limit_message" = "";
+"contact_phase2_warning_popup_storage_limit_settings_button" = "";
+"contact_phase2_error_iternal" = "";
+"contact_phase2_error_quota_restore" = "";
+"contact_phase2_error_quota_backup" = "";
+"download_document_error_popup" = "Вы можете загружать только фотографии, видео или альбомы.";
