--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -367,7 +367,7 @@
 "E-mail Usage Information" = "Інформація про використання електронної пошти";
 "Password fields do not match." = "Паролі не збігаються";
 "Please check the e-mail address." = "Будь-ласка, перевірте адресу електронної пошти.";
-"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Будь-ласка, встановіть пароль, що включає несумісні літери та цифри, щонайменше 6 максимум 16 символів.";
+"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Цей пароль не відповідає правилам, які приведені нижче.";
 "Please check the GSM number" = "Будь ласка, перевірте свій номер телефону";
 "Login denied. Please check your credentials." = "Вхід відхилено. Перевірте свої облікові дані.";
 "Request failed \n Please try again" = "Запит відхилино\n  Будь ласка спробуйте ще раз";
@@ -412,7 +412,7 @@
 "%%%d Restored…" = "%%%d Відновлено…";
 "%%%d Analyzed…" = "%%%d Аналізується ...";
 "%%%d Backed up…" = "%%%d Резервну копію ...";
-"Restored %d Contacts" = "Відновлено %d контактів";
+"Restored %d Contacts" = "На пристрої є %d контакт";
 "%d Duplicated Contacts Deleted" = "%d Дубльовані контакти видалено";
 "You have %d numbers on your contacts backup." = "У вас є %d номери у резервній копії ваших контактів";
 "This contact will be deleted from your contacts." = "Цей контакт буде видалено з ваших контактів.";
@@ -1472,3 +1472,123 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "альбом видалено";
+"hide_album_action_sheet" = "Сховати альбом";
+"sign_up_password_rules" = "Пароль повинен містити щонайменше 6 та максимум 16 символів, принаймні одне число та великі літери повинні містити непослідовні букви.";
+"documents_album_card_title" = "Чи хочете ви сховати ці файли?";
+"documents_album_card_description" = "Елементи %d, включаючи скріншоти та документи, групуються в альбомі документів. Ви можете редагувати свою галерею, сховавши цей альбом. Ви можете отримати доступ до цих фотографій у будь-який час із схованого альбому.";
+"documents_album_card_hide_button" = "Сховати альбом документа";
+"documents_album_card_view_button" = "Розглянути альбом документа";
+"snackbar_ok" = "Добре.";
+"snackbar_trash_bin" = "Кошик для сміття";
+"snackbar_hidden_bin" = "Прихований альбом";
+"analyze_history_delete_success" = "%d файл був видалений.";
+"added_to_favorites_message" = "Додано до фаворитів.";
+"removed_from_favorites" = "Видалено із фаворитів.";
+"added_to_album" = "Додано до альбому.";
+"downloaded_files" = "Завантажено %d файлів";
+"edit_saved" = "Записано.";
+"files_moved" = "Файли переміщені.";
+"success_remove_passcode" = "Пароль видалено.";
+"added_to_favorites_from_lifebox" = "Додано до фаворитів.";
+"edit_security_question_success" = "Оновлено питання безпеки.";
+"set_security_question_success" = "Створено питання безпеки";
+"import_from_instagram_started" = "Почалася передача з Instagram.";
+"import_from_facebook_started" = "Почалася передача з Facebook.";
+"instapick_hashtags_copied" = "Хештеги скопійовані.";
+"create_story_selection_limit" = "Виберіть максимально %d фотографій.";
+"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"free_up_space_alert_title" = "Звільніть місце на телефоні";
+"free_up_space_no_duplicates" = "У вас немає фото / відео, які повторюються";
+"free_up_space_in_progress" = "Ваш список повторюваних файлів ще не готовий, будь ласка, спробуйте пізніше.";
+"all_people_become_premium_text" = "Станьте преміум-членом, щоб побачити усі контакти!";
+"no_people_become_premium_text" = "Жоден із контактів не був ідентифікований. Станьте Преміум-членом, щоб побачити контакти та отримати доступ до більших додаткових функцій!";
+"face_image_enable" = "Активізуй групування обличчя та об’єктів";
+"face_image_enable_message_text" = "Коли ви активізуєте розпізнавання обличчя та об’єкти, завантажені фотографії групуються по обличчю та об’єкти.";
+"face_image_enable_snack_text" = "З розпізнаванням обличчя та об’єктів ваші фотографії починають групуватися, будь ласка, перевірте пізніше.";
+"file_info_people" = "Увімкніть функцію розпізнавання обличчя та об’єкта, щоб бачити людей на фотографіях.";
+"removed_from_album_success" = "Елемент (и) були успішно видалено.";
+"Already have an account?" = "У Вас вже є аккаунт?";
+"already_have_account_title" = "У Вас вже є аккаунт?";
+"contact_phase2_delete_duplicates_title" = "";
+"contact_phase2_delete_duplicates_top_label" = "";
+"contact_phase2_delete_duplicates_delete_all" = "";
+"contact_phase2_delete_duplicates_count" = "";
+"contact_phase2_delete_duplicates_confirm_title" = "";
+"contact_phase2_delete_duplicates_confirm_message" = "";
+"contact_phase2_delete_duplicates_success_title" = "";
+"contact_phase2_delete_duplicates_success_message" = "";
+"contact_phase2_delete_duplicates_back_up_title" = "";
+"contact_phase2_delete_duplicates_back_up_message" = "";
+"contact_phase2_delete_duplicates_back_up_button" = "";
+"contact_phase2_delete_duplicates_progress_title" = "";
+"contact_phase2_delete_duplicates_progress_message" = "";
+"contact_phase2_back_up_contacts_confirm_title" = "";
+"contact_phase2_back_up_contacts_confirm_message" = "";
+"contact_phase2_contact_list_navbar_title" = "";
+"contact_phase2_contact_list_title" = "";
+"contact_phase2_contact_list_info" = "";
+"contact_phase2_contact_list_restore" = "";
+"contact_phase2_contact_list_delete_all" = "";
+"contact_phase2_restore_contacts_confirm_title" = "";
+"contact_phase2_restore_contacts_confirm_message" = "";
+"contact_phase2_restore_contacts_progress_title" = "";
+"contact_phase2_restore_contacts_progress_message" = "";
+"contact_phase2_restore_contacts_success_title" = "";
+"contact_phase2_restore_contacts_success_message" = "";
+"contact_phase2_delete_contacts_confirm_title" = "";
+"contact_phase2_delete_contacts_confirm_message" = "";
+"contact_phase2_delete_all_contacts_success_message" = "";
+"contact_phase2_delete_backup_success_message" = "";
+"contact_phase2_contact_detail_navbar_title" = "";
+"contact_phase2_contact_detail_section_phone" = "";
+"contact_phase2_contact_detail_section_email" = "";
+"contact_phase2_contact_detail_section_address" = "";
+"contact_phase2_contact_detail_section_birthday" = "";
+"contact_phase2_contact_detail_section_notes" = "";
+"contact_phase2_contact_detail_no_info" = "";
+"Off" = "Закрито";
+"contact_phase2_backup_contacts_title" = "";
+"contact_phase2_backup_contacts_message" = "";
+"contact_phase2_backup_contacts_button" = "";
+"contact_phase2_small_card_backup_message" = "";
+"contact_phase2_small_card_backup_button" = "";
+"contact_phase2_small_card_duplicates_message" = "";
+"contact_phase2_small_card_duplicates_button" = "";
+"contact_phase2_big_card_backup_message" = "";
+"contact_phase2_big_card_contacts" = "";
+"contact_phase2_big_card_see_contacts_button" = "";
+"contact_phase2_big_card_autobackup_format" = "";
+"contact_phase2_backup_progress_title" = "";
+"contact_phase2_backup_progress_message" = "";
+"contact_phase2_cancel_analyze_button" = "";
+"contact_phase2_analyze_progress_message" = "";
+"contact_phase2_history_navbar_title" = "";
+"contact_phase2_history_header" = "";
+"contact_phase2_restore_button" = "";
+"contact_phase2_delete_button" = "";
+"contact_phase2_restore_popup_title" = "";
+"contact_phase2_delete_popup_title" = "";
+"contact_phase2_restore_popup_message" = "";
+"contact_phase2_delete_popup_message" = "";
+"contact_phase2_history_cell_title" = "";
+"contact_phase2_error_RemoteServer1101" = "";
+"contact_phase2_error_RemoteServer2000" = "";
+"contact_phase2_error_RemoteServer3000" = "";
+"contact_phase2_error_RemoteServer4000" = "";
+"contact_phase2_error_network" = "";
+"contact_phase2_delete_backup_success_card_title" = "";
+"contact_phase2_delete_backup_success_card_message" = "";
+"contact_phase2_contact_backup_success_navbar_title" = "";
+"contact_phase2_contact_backup_success_title" = "";
+"contact_phase2_contact_backup_success_message" = "";
+"contact_phase2_warning_popup_contact_permissions_title" = "";
+"contact_phase2_warning_popup_contact_permissions_message" = "";
+"contact_phase2_warning_popup_contact_permissions_storage_button" = "";
+"contact_phase2_warning_popup_contact_permissions_delete_button" = "";
+"contact_phase2_warning_popup_storage_limit_title" = "";
+"contact_phase2_warning_popup_storage_limit_message" = "";
+"contact_phase2_warning_popup_storage_limit_settings_button" = "";
+"contact_phase2_error_iternal" = "";
+"contact_phase2_error_quota_restore" = "";
+"contact_phase2_error_quota_backup" = "";
+"download_document_error_popup" = "Ви можете завантажувати тільки фотографії, відео чи альбоми.";
